kubernetes/overlays/dev/middlewares.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware

metadata:
  name: strip-prefix-v1

spec:
  stripPrefix:
    prefixes:
      - /0
      - /1
