kubernetes/overlays/dev/deployment-nats.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
    name: api-v1

spec:
    template:
        spec:
            containers:
                - name: app
                  volumeMounts:
                      - name: nats-creds
                        mountPath: /secrets/nats
                        readOnly: true
            volumes:
                - name: nats-creds
                  secret:
                      secretName: api-nats
                      items:
                          - key: NATS_CREDS
                            path: creds
