kubernetes/overlays/dev/destination-rules.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule

metadata:
    name: api

spec:
    host: api-v1.sweetrpg-catalog.svc.cluster.local
    trafficPolicy:
        loadBalancer:
            simple: LEAST_CONN
